# WoC

code/: CMakeLists.txt
code/src/: CMakeLists.txt
code/src/common/: CMakeLists.txt  config.cpp  config.hpp
code/src/master/: CMakeLists.txt  master.cpp  master_version.hpp
code/src/slave/: CMakeLists.txt  slave.cpp  slave_version.hpp
test/master/: master  woc.in
test/slave_container/: slave_in_container
test/slave_container/results/cache/fontconfig/: 3830d5c3ddfd5cd38a049b759396e72e-le32d4.cache-7  4c599c202bc5c08e2d34565a40eac3b2-le32d4.cache-7  7ef2298fde41cc6eeb7af42e48b7d293-le32d4.cache-7  d589a48862398ed80a3d6066f4f56f4c-le32d4.cache-7
test/slave_linux/: slave
