
#------------------------------------------------------------------------------#
# CMake settings
#------------------------------------------------------------------------------#

cmake_minimum_required(VERSION 2.8)

#------------------------------------------------------------------------------#
# Subdirectories
#------------------------------------------------------------------------------#

# Common
add_subdirectory(common)

# Master
add_subdirectory(master)

# Slave
add_subdirectory(slave)
