
#------------------------------------------------------------------------------#
# CMake settings
#------------------------------------------------------------------------------#
cmake_minimum_required(VERSION 2.8)

#------------------------------------------------------------------------------#
# Library settings
#------------------------------------------------------------------------------#
file(GLOB sources "config.cpp")
add_library(common STATIC ${sources})

target_include_directories(common PUBLIC ".")
